# cpp-demo

./: .gitignore  CMakeLists.txt  README.md
include/: SimpleCalculator.hpp
libs/: CMakeLists.txt
libs/matrix/: CMakeLists.txt
libs/matrix/include/: Matrix.hpp
libs/matrix/src/: Matrix.cpp
libs/simple_calc/: CMakeLists.txt
libs/simple_calc/include/: SimpleCalculator.hpp
libs/simple_calc/src/: SimpleCalculator.cpp
projects/: CMakeLists.txt
projects/matrix-app/: CMakeLists.txt
projects/matrix-app/include/: MatrixApp.hpp
projects/matrix-app/src/: MatrixApp.cpp
projects/simple_calc_app/: CMakeLists.txt
projects/simple_calc_app/include/: SimpleCalc.hpp
projects/simple_calc_app/src/: SimpleCalcApp.cpp
src/: SimpleCalculator.cpp  main.cpp
